# ciphernest-sample-bins

./: .gitignore  CMakeLists.txt  build_matrix.bat  build_matrix.ps1
01-calc-console/: CMakeLists.txt  main.cpp
02-gui-license/: CMakeLists.txt  main.cpp  resource.h  resource.rc
03-seh-crash/: CMakeLists.txt  main.cpp
04-cpp-exceptions/: CMakeLists.txt  main.cpp
05-cfg-testbed/: CMakeLists.txt  main.cpp
06-tls-callbacks/: CMakeLists.txt  main.cpp
07-dll-plugin-host/: CMakeLists.txt  host.cpp  plugin_a.cpp  plugin_api.h  plugin_b.cpp
08-multithreaded/: CMakeLists.txt  main.cpp
09-file-compressor/: CMakeLists.txt  main.cpp
10-large-resource/: CMakeLists.txt  main.cpp  resource.h  resources.rc
11-dll-loader/: CMakeLists.txt  main.cpp
12-delay-load/: CMakeLists.txt  main.cpp
13-security-hardened/: CMakeLists.txt  main.cpp
14-mfc-app/: CMakeLists.txt  main.cpp  mfc_app.h  mfc_app.rc  resource.h
15-atl-app/: CMakeLists.txt  atl_app.manifest  main.cpp  resource.rc
16-winui-app/: App.xaml.cpp  App.xaml.h  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  Package.appxmanifest  WinUIApp.vcxproj  WinUIApp.vcxproj.filters
17-dotnet-winforms-utility/: MainForm.cs  MetadataInspector.csproj  Program.cs
18-dotnet-matching-game/: MainForm.cs  Program.cs
19-dotnet-maui-sample/: MauiNoteApp.csproj  MauiProgram.cs
20-dotnet-reflection-emit/: Program.cs
21-dotnet-plugin-system/: IPlugin.cs  PluginLoadContext.cs  Program.cs
22-dotnet-wpf-app/: App.xaml  App.xaml.cs  MainViewModel.cs  MainWindow.xaml  MainWindow.xaml.cs  Styles.xaml  TaskManager.csproj
23-dotnet-winforms-sysinfo/: MainForm.cs  Program.cs  SysInfoViewer.csproj
24-c-cli/: CMakeLists.txt  main.c
25-rust-cli/src/: main.rs
26-go-cli/: main.go
27-odin-cli/: main.odin
28-zig-cli/: build.zig
28-zig-cli/src/: main.zig
29-python-tkinter-app/: main.py
30-nodejs-gui-app/: main.js  package-lock.json  package.json
31-electron-webview-app/: main.js  package-lock.json  package.json  preload.js
31-electron-webview-app/renderer/: index.html  renderer.js  style.css
32-tauri-webview-app/: package-lock.json  package.json
32-tauri-webview-app/src/: index.html
32-tauri-webview-app/src-tauri/: Cargo.toml  tauri.conf.json
32-tauri-webview-app/src-tauri/src/: main.rs
33-flutter-windows-app/: README.md  pubspec.yaml
33-flutter-windows-app/lib/: main.dart
33-flutter-windows-app/test/: widget_test.dart
33-flutter-windows-app/windows/: CMakeLists.txt
33-flutter-windows-app/windows/runner/: Runner.rc  main.cpp
34-java-swing-app/src/main/java/protector/victims/: JavaSwingVictim.java
35-vbnet-winforms-app/: Program.vb
36-windows-shared-library/: CMakeLists.txt  smoke.c  win_shared.c  win_shared.h
37-linux-shared-library/: Makefile  linux_shared.c  linux_shared.h  smoke.c
38-macos-shared-library/: Makefile  macos_shared.c  macos_shared.h  smoke.c
39-linux-cli-app/: Makefile  main.c
40-macos-cli-app/: build.sh
40-macos-cli-app/Sources/: main.swift
41-macos-ui-app/: build.sh
41-macos-ui-app/Sources/: MacVictimUI.swift
42-llvm-lit-binaries/: README.md  fetch_build_llvm_lit_binaries.ps1  prepare_llvm_lit_binaries.ps1  run_lit_comparison.ps1
43-asm-cli/: README.md  build.ps1
44-delphi-map/: DelphiMapVictim.dpr  DelphiMapVictim.dproj  README.md  build.ps1
45-linux-executable-variants/: README.md  build.sh  main.c
46-macos-executable-variants/: README.md  build.sh  main.c
47-gcc-apple-map/: README.md  build.sh  main.c
48-gcc-linux-hardened-variants/: README.md  build.sh  main.c
49-msvc-map-hardened-variants/: README.md  build.ps1  main.c
50-ios-app-variants/: Info.plist  README.md  build.sh  main.m
51-macos-app-amd64/: Info.plist  README.md  build.sh  main.c
52-macos-dll-i386/: README.md  build.sh  macos_dll_i386.c  macos_dll_i386.h  smoke.c
53-linux-x64/: README.md  build.sh  main.c
54-linux-x86/: README.md  build.sh  main.c
55-win32-delphi-i386/: README.md  Win32DelphiVictim.dpr  Win32DelphiVictim.dproj  build.ps1
56-win32-exe-i386/: README.md  build.ps1  main.c
57-win32-dll-i386/: README.md  build.ps1  smoke.c  win32_dll_i386.c  win32_dll_i386.h
58-windows-driver-variants/: README.md  build.ps1
58-windows-driver-variants/variants/kmdf/: kmdf_victim.c
58-windows-driver-variants/variants/ndis/: ndis_victim.c
58-windows-driver-variants/variants/safeguarded/: safeguarded_driver_victim.c
58-windows-driver-variants/variants/simple/: simple_driver_victim.c
58-windows-driver-variants/variants/umdf/: umdf_victim.c
58-windows-driver-variants/variants/wdm/: wdm_victim.c
59-uefi-driver/: README.md  UefiVictim.c  UefiVictim.dsc  UefiVictim.inf  build.ps1
60-macos-driver-variants/: README.md  build.sh
60-macos-driver-variants/driverkit/: Info.plist  driverkit_victim.cpp
60-macos-driver-variants/kext/: Info.plist  kext_victim.cpp
61-linux-driver-variants/: Makefile  README.md  build.sh  victim_char.c  victim_misc.c  victim_netdev.c  victim_platform.c  victim_procfs.c  victim_safeguarded.c
62-windows-runtime-module/: README.md  build.ps1  runtime_module.c
63-linux-runtime-module/: README.md  build.sh  runtime_module.c
64-macos-runtime-module/: README.md  build.sh  runtime_module.c
65-dotnet-il-runtime-modules/: DotNetRuntimeModule.cs  DotNetRuntimeModules.csproj  README.md  RuntimeModule.il  build.ps1
66-driver-runtime-module/: README.md  build.ps1  driver_runtime_module.c  driver_runtime_module.h
67-freepascal-cli/: main.pas
68-ada-cli/: main.adb
69-nim-cli/: main.nim
70-v-cli/: main.v
71-swift-cli/: main.swift
72-kotlin-native-cli/: main.kt
73-scala-native-cli/: build.sbt
73-scala-native-cli/src/main/scala/: Main.scala
74-haskell-cli/: main.hs
75-dart-cli/: main.dart  pubspec.yaml
76-julia-cli/: main.jl
77-cython-cli/: main.pyx
78-jsts-cli/: main.ts  package-lock.json  package.json  tsconfig.json
79-perl-cli/: main.pl
80-lua-cli/: main.lua
81-elixir-cli/: main.exs
cmake/: MatrixDefaults.cmake
